实现Github登录，返回用户信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8287
+
+github.client.id=e59f3b8eca5fa102d26f
+github.client.secret=aca9f01ac6d02e09b100453f26c4fc8cd331c274
+github.redirect.uri=http://localhost:8287/callback
