--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8287
 github.client.id=e59f3b8eca5fa102d26f
 github.client.secret=aca9f01ac6d02e09b100453f26c4fc8cd331c274
 github.redirect.uri=http://localhost:8287/callback
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/eesy?useSSL=false&serverTimezone=Hongkong&characterEncoding=utf-8&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=HWJhouwenjun0992
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
