--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eesy?useSSL=false&serverTimezo
 spring.datasource.username=root
 spring.datasource.password=HWJhouwenjun0992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
